# tnt

./: .gitignore  Cargo.toml  README.md
examples/: addition.rs  arithmetization.rs  commutativity.rs  construction.rs  decision_problems.rs  identity.rs  intro.rs  intro_deductions.rs  intro_formulas.rs  intro_terms.rs  scope.rs  translation.rs
src/: Operations.rs  Properties.rs  StringManipulation.rs  Types.rs  _old_operations.rs  _types.rs  alt_type_system.rs  axioms.rs  deduction.rs  equivalences.rs  errors.rs  formula.rs  formula_old.rs  latex.rs  lib.rs  logic_errors.rs  main.rs  operations.rs  ops_construction.rs  ops_production.rs  production.rs  properties.rs  pub enum Formula {.rs  random.rs  scan.rs  string_manip.rs  term.rs  terms.rs  translate.rs  translate_deduction.rs  types.rs
src/operations/: construction.rs  construction_old.rs  mod.rs  production.rs  production_old.rs
src/parser/: grammar.pest  mod.rs  parse_formula.rs
src/parsing/: backus-naur.txt  formula_tree.rs  mod.rs  parser.rs  parser_alt.rs  syntax_tree.rs  tnt.pest  tnt_pretty.pest
