[package]
name = "tnt"
version = "1.0.1"
authors = ["SymmetricChaos <ajfraebel@gmail.com>"]
edition = "2018"
description = "Simple runtime validated proofs in number theory"
license = "MIT"
repository = "https://github.com/SymmetricChaos/tnt"
keywords = ["number-theory","math","logic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tnt"

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
num = "0.4.0"
pest = "2.0"
pest_derive = "2.0"
indexmap = "1.9.1"